...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter search text" textAlignment="natural" minimumFontSize="25" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vuc-yz-wSh">
                                <rect key="frame" x="0.0" y="103" width="393" height="70"/>
                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchTextfield"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="ceb-4E-TVs"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
...
                                <rect key="frame" x="120" y="178" width="152" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="0sP-4M-9sZ"/>
                                    <constraint firstAttribute="width" constant="152" id="ARj-gF-sl1"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Search"/>
                                <connections>
                                    <action selector="searchButtonPressed:" destination="iL3-Qa-Ve0" eventType="touchUpInside" id="6Yf-xW-ogF"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5Ik-ld-aBM">
                                <rect key="frame" x="0.0" y="238" width="393" height="614"/>
...
