import Foundation
enum Constants {
    static let baseUrl = "https://api.github.com/search/users?q="
    static let midUrl = "&per_page=10&page="
    static let resultID = "ResultCell"
    static let mainVCTitle = "Search Github"
}
